clean up after summer school

--- a/plot_trait_evolution.Rmd
+++ b/plot_trait_evolution.Rmd
@@ -3,17 +3,18 @@ output:
     html_document:
         theme: cerulean
 ---
+
 # **Evolutionary lottery of skull and beak morphology**
 
 <br>
 
-> [**Beak and skull shapes in birds of prey (“raptors”) are strongly coupled and largely controlled by size.**](http://eprints.whiterose.ac.uk/99452/1/Bright%20et%20al.%202016_SelfArchive.pdf)
+> [**Beak and skull shapes in birds of prey ("raptors") are strongly coupled and largely controlled by size.**](http://eprints.whiterose.ac.uk/99452/1/Bright%20et%20al.%202016_SelfArchive.pdf)
 
 gif provided by the awesome **Jen Bright** [**\@MorphobeakGeek**](https://twitter.com/MorphobeakGeek)!
 
 ![](gif.gif)
 
-In this exercise we will **use a github repo** to collaboratively collate and *simulate evolutionary trajectories for each participants' species* ***body size*** using a simple brownian motion evolutionary model. This assumes evolutionary steps to progress comletely at random. You could say: 
+In this exercise we will **use a github repo** to collaboratively collate and *simulate evolutionary trajectories for each participants' species* ***body size*** using a simple brownian motion evolutionary model. This assumes evolutionary steps to progress comletely at random. You could say:
 
 #### it's a bit of lottery!
 
@@ -23,7 +24,7 @@ Each participant has **created and contributed a file** specifying the parameter
 
 Participants will then get to **see the skull and beak shape** corresponding to their species relative body size!
 
-***
+------------------------------------------------------------------------
 
 ### setup
 
@@ -40,7 +41,7 @@ dt <- NULL # generate object to compile time-series data
 cols <- NULL # generate object to compile trendline colours
 ```
 
-***
+------------------------------------------------------------------------
 
 ### Simulate trait evolution, iterate over all species files in `params/` folder
 
@@ -63,8 +64,6 @@ for(spp in spp.files){
 
 ```
 
-
-
 ### Plot trait evolution timeseries
 
 Use the data generated to plot all species.
@@ -80,13 +79,13 @@ p <- ggplot(data = dt, aes(x = t, y = trait, group = species, colour = species))
 
 <br>
 
-***
+------------------------------------------------------------------------
 
 ## **Skulls!** find the skull associated with your species:
 
 <br>
 
-Skulls are organised from **largest** to **smallest**. The largest skulls are **vulture-like**, (e.g. **no. 50, the Andean condor** [*Vultur gryphus*](https://en.wikipedia.org/wiki/Andean_condor)) and the  smallest are **falconet-like**, (e.g. **no. 1 Collared falconet** [*Microhierax caerulescens*](https://en.wikipedia.org/wiki/Collared_falconet))
+Skulls are organised from **largest** to **smallest**. The largest skulls are **vulture-like**, (e.g. **no. 50, the Andean condor** [*Vultur gryphus*](https://en.wikipedia.org/wiki/Andean_condor)) and the smallest are **falconet-like**, (e.g. **no. 1 Collared falconet** [*Microhierax caerulescens*](https://en.wikipedia.org/wiki/Collared_falconet))
 
 ```{r, echo=FALSE, results='asis'}
 skull <- dt[dt$t == 100,] 
@@ -105,4 +104,3 @@ if(length(gf) > 0){
   }
 }
 ```
-
